# NapaTrackMater

./: .buildinfo  .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  BTrackMateLocalization.ipynb  BTrackMateVisualization.ipynb  CellFateDetermination.ipynb  Dockerfile  FrequencyOscillations.ipynb  LICENSE  MASTER.html  MASTER.md  Pipfile  README.html  README.md  TrackMateVisualization.ipynb  Untitled.ipynb  _config.yml  _toc.yml  fate_mapping.py  genindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  update_version.py
.github/workflows/: deploy.yml  napari-hub-preview.yml  test_and_deploy.yml
.ipynb_checkpoints/: BTrackMateLocalization-checkpoint.ipynb  BTrackMateVisualization-checkpoint.ipynb  CellFateDetermination-checkpoint.ipynb  FrequencyOscillations-checkpoint.ipynb  TrackMateVisualization-checkpoint.ipynb
Notebooks/: Track_vector.html  Track_vector.ipynb  Track_vector_AWS.ipynb
Notebooks/.ipynb_checkpoints/: TrackVisualization-checkpoint.ipynb
_build/.doctrees/: MASTER.doctree  README.doctree  environment.pickle
_build/html/: MASTER.html  README.html  genindex.html  objects.inv  search.html  searchindex.js
examples/: AllTrackVisualization.ipynb  BTrackMateLocalization.ipynb  BTrackMateRandomMotion.ipynb  BTrackMateSplitLocalization.ipynb  BTrackMateVisualization.ipynb  CellFateDetermination.ipynb  CellTissueLocalization.ipynb  CellToTissueLocalization.ipynb  ColorTracks.ipynb  ColorTracks_no_xml.ipynb  DistributionPlots.ipynb  FrequencyOscillations.ipynb  SegRelabelTracks.ipynb
examples/.ipynb_checkpoints/: BTrackMateLocalization-checkpoint.ipynb  BTrackMateVisualization-checkpoint.ipynb  CellFateDetermination-checkpoint.ipynb
examples/Scripts/: .AllTrackVisualization.py.swp  ColorTracks.py  (+12 more)
localnapatrackmater/: bTrackmate.py
mnapatrackmater/: __main__.py  bTrackmate.py
napatrackmater/: CloudAutoEncoder.py  DeepEmbeddedClustering.py  Trackmate.py  Trackvector.py  __init__ .py  __init__.py  __main__.py  bTrackmate.py  clustering.py  example.py  fast_radius_regression.py  fate_mapping.py  numpyexample.py  pretrained.py  version.py
napatrackmater.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+324 files in other folders)
