[metadata]
name = napatrackmater
version = attr: napatrackmater._version.__version__
description = Import Trackmate XML files for Track Visualization and analysis in Napari.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kapoorlabs-CAPED/napatrackmater
author = Varun Kapoor, Mari Tolonen, Jakub Sedzinski
author_email = randomaccessiblekapoor@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/Kapoorlabs-CAPED/napatrackmater/issues
    Documentation = https://github.com/Kapoorlabs-CAPED/napatrackmater#README.md
    Source Code = https://github.com/Kapoorlabs-CAPED/napatrackmater
    User Support = https://github.com/Kapoorlabs-CAPED/napatrackmater/issues

[options]
packages = find:
install_requires =
    lxml
    vollseg
    napari
    natsort
    seaborn
    cellshape-cloud
    cellshape-helper
    kapoorlabs-lightning
    lightning
    trimesh
    umap-learn
    plotly
    pymesh
    torchsummary
    statsmodels
    numpy


python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
